SDKs/apideck.com/vault/9.1.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/apideck.com/vault/9.1.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.ConnectionSettingsAllRequest{
        Security: operations.ConnectionSettingsAllSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        PathParams: operations.ConnectionSettingsAllPathParams{
            Resource: "unde",
            ServiceID: "deserunt",
            UnifiedAPI: "porro",
        },
        Headers: operations.ConnectionSettingsAllHeaders{
            XApideckAppID: "nulla",
            XApideckConsumerID: "id",
        },
    }

    ctx := context.Background()
    res, err := s.Connections.ConnectionSettingsAll(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GetConnectionResponse != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### Connections

* `ConnectionSettingsAll` - Get resource settings
* `ConnectionSettingsUpdate` - Update settings
* `ConnectionsAdd` - Create connection
* `ConnectionsAll` - Get all connections
* `ConnectionsCallback` - Callback
* `ConnectionsDelete` - Deletes a connection
* `ConnectionsImport` - Import connection
* `ConnectionsOne` - Get connection
* `ConnectionsRevoke` - Revoke connection
* `ConnectionsToken` - Get Access Token
* `ConnectionsUpdate` - Update connection

### Consumers

* `ConsumerRequestCountsAll` - Consumer request counts
* `ConsumersAdd` - Create consumer
* `ConsumersAll` - Get all consumers
* `ConsumersDelete` - Delete consumer
* `ConsumersOne` - Get consumer
* `ConsumersUpdate` - Update consumer

### Logs

* `LogsAll` - Get all consumer request logs

### Sessions

* `SessionsCreate` - Create Session
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
